force-app/main/default/objects/ProjectReview__c/ProjectReview__c.object-meta.xml
<CustomObject>
    <label>Project Review</label>
    <nameField>
        <displayFormat>PR-{000}</displayFormat>
        <label>Project Review ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>