force-app/main/default/objects/ProjectReview__c/fields/BudgetComment__c.field-meta.xml
<CustomField>
    <fullName>BudgetComment__c</fullName>
    <label>Budget Comments</label>
    <type>TextArea</type>
</CustomField>