force-app/main/default/objects/ProjectReview__c/fields/IsLatestPR__c.field-meta.xml
<CustomField>
    <fullName>IsLatestPR__c</fullName>
    <formula>IF( ProjectReviewDate__c  &gt;=  LastProjectReviewDate__c , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsLatestPR?</label>
    <type>Checkbox</type>
</CustomField>