force-app/main/default/objects/ProjectReview__c/fields/LastProjectReviewDate__c.field-meta.xml
<CustomField>
    <fullName>LastProjectReviewDate__c</fullName>
    <label>Last Project Review Date</label>
    <type>Date</type>
</CustomField>