force-app/main/default/objects/ProjectReview__c/fields/LastSevenDays__c.field-meta.xml
<CustomField>
    <fullName>LastSevenDays__c</fullName>
    <label>Last 7 Days</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>