force-app/main/default/objects/ProjectReview__c/fields/NextSevenDays__c.field-meta.xml
<CustomField>
    <fullName>NextSevenDays__c</fullName>
    <label>Next 7 Days</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>