force-app/main/default/objects/ProjectReview__c/fields/OverallStatus__c.field-meta.xml
<CustomField>
    <fullName>OverallStatus__c</fullName>
    <label>Overall Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProjectReviewStatus</valueSetName>
    </valueSet>
</CustomField>