force-app/main/default/objects/ProjectReview__c/fields/Planning__c.field-meta.xml
<CustomField>
    <fullName>Planning__c</fullName>
    <label>Planning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProjectReviewStatus</valueSetName>
    </valueSet>
</CustomField>