force-app/main/default/objects/ProjectReview__c/fields/PlanningComments__c.field-meta.xml
<CustomField>
    <fullName>PlanningComments__c</fullName>
    <label>Planning Comments</label>
    <type>TextArea</type>
</CustomField>