force-app/main/default/objects/ProjectReview__c/fields/PMO__c.field-meta.xml
<CustomField>
    <fullName>PMO__c</fullName>
    <label>PMO</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>