force-app/main/default/objects/ProjectReview__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>SpringProject_Project__c</referenceTo>
    <relationshipLabel>Project Reviews</relationshipLabel>
    <relationshipName>Project_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>