force-app/main/default/objects/ProjectReview__c/fields/ProjectReviewDate__c.field-meta.xml
<CustomField>
    <fullName>ProjectReviewDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Project Review Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>