force-app/main/default/objects/ProjectReview__c/fields/ResourcesComments__c.field-meta.xml
<CustomField>
    <fullName>ResourcesComments__c</fullName>
    <label>Resources Comments</label>
    <type>TextArea</type>
</CustomField>