force-app/main/default/objects/ProjectReview__c/fields/ScopeComments__c.field-meta.xml
<CustomField>
    <fullName>ScopeComments__c</fullName>
    <label>Scope Comments</label>
    <type>TextArea</type>
</CustomField>