force-app/main/default/objects/ProjectReview__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ProjectReviewDate__c</columns>
    <columns>OverallStatus__c</columns>
    <columns>Scope__c</columns>
    <columns>Planning__c</columns>
    <columns>Resources__c</columns>
    <columns>Budget__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LastProjectReviewDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>