force-app/main/default/objects/ProjectReview__c/listViews/LatestProjectReview.listView-meta.xml
<ListView>
    <fullName>LatestProjectReview</fullName>
    <columns>NAME</columns>
    <columns>ProjectReviewDate__c</columns>
    <columns>OverallStatus__c</columns>
    <columns>Scope__c</columns>
    <columns>Planning__c</columns>
    <columns>Resources__c</columns>
    <columns>Budget__c</columns>
    <filterScope>Everything</filterScope>
    <label>Latest Project Review</label>
</ListView>