force-app/main/default/objects/ProjectReview__c/listViews/Ticketing_Review.listView-meta.xml
<ListView>
    <fullName>Ticketing_Review</fullName>
    <columns>NAME</columns>
    <columns>ProjectReviewDate__c</columns>
    <columns>OverallStatus__c</columns>
    <columns>Scope__c</columns>
    <columns>Planning__c</columns>
    <columns>Resources__c</columns>
    <columns>Budget__c</columns>
    <columns>LastProjectReviewDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>Ticketing - ServiceCloud</value>
    </filters>
    <label>Ticketing Project Review</label>
</ListView>